# neuro-scout

./: README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  tests.yaml
data/: paper_urls.txt
neuroscout/: cli.py  data.py  main.py  prompts.py  utils.py
tests/: test_utils.py  test_version.py
